# ZKP-rust-tools

./: Cargo.toml  README.md
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/bikzg/: prover.rs  srs.rs  traits.rs  utils.rs
crypto/src/lagrange_basis/: mod.rs  utils.rs
math/: Cargo.toml
math/src/: lib.rs
math/src/bifft/: bipolynomial.rs  fft.rs  mod.rs
math/src/bipolynomial/: mod.rs
prover/batch_groth16/: cargo.toml
prover/batch_groth16/src/: README.md  lagrange_basis.rs  lib.rs  qap_batch.rs  subcircuit.rs
src/: lib.rs  main.rs
src/bifft/: README.md  mod.rs  polynomail.rs
src/bikzg/: mod.rs  prover.rs  srs.rs  traits.rs  utils.rs
src/bipolynomial/: README.md  mod.rs
