[package]
name = "bikzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambdaworks-math = { version = "0.7.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8.0"
rand = "0.8.5"
rustyline = "12"


# [workspace.dependencies]
# bikzg = { path = "./", version = "0.1.0", default-features = false }

# # [features]
# # default = []
# # cuda = []
# # metal = []