[workspace]

members = ["math", "crypto"]
exclude = ["ensure-no_std"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lambdaclass/lambdaworks"




# [dependencies]
# lambdaworks-math = { version = "0.7.0" }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# rayon = "1.8.0"
# rand = "0.8.5"
# rustyline = "12"


[workspace.dependencies]
iai-callgrind = "0.3.1"
zkp-rust-tools-crypto = { path = "./crypto", version = "0.1.0", default-features = false }
zkp-rust-tools-math = { path = "./math", version = "0.1.0", default-features = false }

# # [features]
# # default = []
# # cuda = []
# # metal = []