[package]
name = "zkp-rust-tools-crypto"
description = "Data structures and primitives for cryptography library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkp-rust-tools-math = { workspace = true, features = ["alloc"] }
lambdaworks-math = { git="https://github.com/lambdaclass/lambdaworks.git", version = "0.10.0" }
lambdaworks-groth16 = {  git="https://github.com/lambdaclass/lambdaworks.git",version = "0.10.0"}
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
ndarray = { version = "0.16.1", default-features = false }


# Optional
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
rayon = { version = "1.8.0" }

rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"
iai-callgrind.workspace = true
rand = "0.8.5"
rand_chacha = "0.3.1"



[features]
default = ["std"]
std = ["lambdaworks-math/std", "sha2/std", "sha3/std", "serde?/std"]
serde = ["dep:serde"]
# parallel = ["dep:rayon"]